@@ -128,3 +128,4 @@
 [2025-1.16-02x61]	Debugging for LTS - Merged Credentials and Monitor, generated (OpenTTY$MIDletControl) class
 [2025-1.16-02x62]	Release 1.16 LTS 
 [2025-1.16.1-02x63] 1.16.1 Suite case
+[2025-1.16.1-02x64] Added support for MIDI playing
