@@ -7,7 +7,8 @@ Copyright (C) 2025 - Mr. Lima
 
 [ _Updates_ ]
 
-- 
+- **Audio API** added support to play **.midi** files
+
 
 [ _Notes_ ]
 
